LOVE 0.10.3 [Super Toast]
-------------------------

Released: N/A

  * Added RopeJoint:setMaxLength.

  * Fixed Shader:send and Shader:sendColor ignoring the last argument for an array.
  * Fixed a crash when love.graphics.pop is called after a love.window.setMode while the transformation stack was not empty.
  * Fixed BezierCurves to error instead of hanging in some situations.

  * Improved command line argument handling.
  * Improved seeking support, especially for short video files.

  * Updated the default error handler to allow copying the error to the clipboard when the user decides to do so.
  * Updated love.filesystem.setRequirePath to support multiple template '?' characters in each path.

LOVE 0.10.2 [Super Toast]
-------------------------

Released: 2016-10-31

  * Added lovec.exe in Windows. It is the same as love.exe but built with the Console subsystem, so it always uses or provides a console.
  * Added the ability to restart the game via love.event.quit("restart").
  * Added support for passing a table to love.mouse.isDown, love.keyboard.isDown, love.keyboard.isScancodeDown, Joystick:isDown, and Joystick:isGamepadDown.
  * Added love.window.isMaximized.
  * Added 'shaderswitches' field to the table returned by love.graphics.getStats.
  * Added Quad:getTextureDimensions.
  * Added 'ellipse' area distribution to ParticleSystems.
  * Added support for BC4-7 compressed texture formats in KTX files.
  * Added PrismaticJoint:getAxis and WheelJoint:getAxis.
  * Added 2-point version of love.physics.newRevoluteJoint.
  * Added table variants of Fixture:setCategory and Fixture:setMask.
  * Added getNextVertex and getPreviousVertex to ChainShape and EdgeShape.
  * Added optional reference angle arguments to RevoluteJoint, PrismaticJoint, and WeldJoint constructors.
  * Added RevoluteJoint:getReferenceAngle, PrismaticJoint:getReferenceAngle, and WeldJoint:getReferenceAngle.
